force-app/main/default/objects/Collateral__c/Collateral__c.object-meta.xml
<CustomObject>
    <description>Collateral used to secure a loan; links to the loan and the collateral owner (Account).</description>
    <label>Collateral</label>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>