force-app/main/default/objects/Collateral__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <description>Type of collateral asset (e.g. Brochure, Whitepaper).</description>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>One-Pager</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Battle Card</fullName>
            </value>
            <value>
                <fullName>Datasheet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Real Estate</fullName>
                <isActive>false</isActive>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>Vehicle</fullName>
                <isActive>false</isActive>
                <label>Vehicle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>