force-app/main/default/objects/Collateral__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>When the asset is no longer approved for use.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>