force-app/main/default/objects/Collateral__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan this collateral secures.</description>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Collateral</relationshipLabel>
    <relationshipName>Collateral</relationshipName>
    <type>Lookup</type>
</CustomField>