force-app/main/default/objects/Collateral__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that owns the collateral.</description>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collateral</relationshipLabel>
    <relationshipName>Collateral</relationshipName>
    <type>Lookup</type>
</CustomField>